--- a/app/src/main/res/menu/hotel_delete_list.xml
+++ b/app/src/main/res/menu/hotel_delete_list.xml
@@ -6,4 +6,10 @@
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/action_delete"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_edit"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:title="@string/action_edit"
+        app:showAsAction="always|withText" />
 </menu>
